# test-bench

./: .gitignore  CMakeLists.txt  go.work
clojure/clojure-noob/: README.md
clojure/clojure-noob/src/clojure_noob/: core.clj
glsl/draw_circle/: glsl_circle.glsl
go/: go.sum
go/avro_test/: go.mod  test.go
go/eth_test/: go.work
go/eth_test/first/: README.md  anvil_dev_api_test.go  anvil_helpers.go  eth_basics_test.go  ganache_dev_api_test.go  gnache_helpers.go  go.mod  go.sum  test.py  test_helpers.go  transactions_test.go
go/learning/: README.md  go.mod
go/learning/basics/: exercise.go  goroutines.go  goroutines_test.go  main.go  quicksort_test.go
go/learning/stuff/: stuff_test.go
go/learning/stuff/demo/: messenger.go  module.go  singleton.go
go/pkg/protocol/: protocol.go
nim/: main  main.nim  nano.sh
nim/learning/: basics  basics.nim  objects  objects.nim  test
nim/learning/bk/: env_vars_const_and_immutable.nim
py/: log_std.py
qml/: main.qml  qml.qrc
qml/Views/: DynamicView.qml  IntroView.qml  MediaView.qml  PipView.qml  PlayerView.qml
qml/custom/Controls/: StackView.qml  qmldir
qt/LazyLoadingLinearProxyModel/: LazyLoadingLinearProxyModel.cpp  LazyLoadingLinearProxyModel.h
qt/QmlExperiments/: LayoutsExample.qml  QmlExperiments.pyproject  main.qml
qt/QtQmlAppTemplate/: CMakeLists.txt
qt/QtQmlAppTemplate/qml/: CMakeLists.txt  main.qml
qt/QtQmlAppTemplate/qml/Views/: PipView.qml
qt/QtQmlAppTemplate/qml/custom/Controls/: Context.qml  qmldir
qt/QtQmlAppTemplate/res/: res.qrc
qt/TreeOfWidgets/: .gitignore  CMakeLists.txt  README.md
qt/TreeOfWidgets/apps/: CMakeLists.txt
qt/TreeOfWidgets/apps/WidgetForest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
qt/TreeOfWidgets/libs/: CMakeLists.txt
qt/TreeOfWidgets/libs/BinaryTreeModel/: CMakeLists.txt
qt/TreeOfWidgets/libs/BinaryTreeModel/src/: CMakeLists.txt
qt/TreeOfWidgets/libs/BinaryTreeModel/src/BinaryTreeModel/: BinaryNode.cpp  BinaryNode.h  BinaryTreeModel.cpp  BinaryTreeModel.h  CMakeLists.txt
qt/TreeOfWidgets/libs/CustomWidgets/: CMakeLists.txt
qt/TreeOfWidgets/libs/CustomWidgets/src/: CMakeLists.txt
qt/TreeOfWidgets/libs/CustomWidgets/src/CustomWidgets/: BaseNodeWidget.cpp  BaseNodeWidget.h  BinaryTreeView.cpp  BinaryTreeView.h  CMakeLists.txt  FloatNodeWidget.cpp  FloatNodeWidget.h  StringNodeWidget.cpp  StringNodeWidget.h
qt/qml-plugins/: .gitignore
qt/qml-plugins/apps/: CMakeLists.txt
qt/qml-plugins/apps/demo/: CMakeLists.txt
qt/qml-plugins/apps/demo/src/: CMakeLists.txt  main.cpp  main.qml
qt/qml-plugins/libs/: CMakeLists.txt
qt/qml-plugins/libs/Chat/: CMakeLists.txt
qt/qml-plugins/libs/Chat/qml/: CMakeLists.txt  Chat-qml.qrc
qt/qml-plugins/libs/Chat/qml/demo/Chat/: ChatView.qml  qmldir
qt/qml-plugins/libs/Chat/src/: CMakeLists.txt
qt/qml-plugins/libs/Chat/src/Chat/: CMakeLists.txt  ChatModule.h  ChatPlugin.cpp  ChatPlugin.h
qt/qml-plugins/libs/Communities/: CMakeLists.txt
qt/qml-plugins/libs/Communities/qml/: CMakeLists.txt  Communities-qml.qrc
qt/qml-plugins/libs/Communities/qml/demo/Communities/: CommunitiesView.qml  qmldir
qt/qml-plugins/libs/Communities/src/: CMakeLists.txt
qt/qml-plugins/libs/Communities/src/Communities/: CMakeLists.txt  CommunitiesModule.h  CommunitiesPlugin.cpp  CommunitiesPlugin.h
res/: CMakeLists.txt
src/: AppContext.cpp  AppContext.h  CMakeLists.txt  main.cpp
todo/ghstack/: new_file.md  renamed_file.md
todo/ghstack/new_dir/: new_subfile.md
